package com.chessonline
package chess.domain

final case class Piece(side: Side, pieceType: PieceType)
